tup/parse/testdata/error/review/type_declarations.tup
# missing type body
Point = type

/home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:13: error: expecting "tuple type", got ""

# unclosed tuple type
Point = type (x: Float,

/home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:24: error: expecting "field name", got ""

# type keyword not followed by tuple body
Shape = type Circle | Triangle |

/home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:14: error: expecting "tuple type", got "Circle"

# union type missing variant after pipe
Shape = Circle | Triangle |

/home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:28: error: expecting "union member", got ""

# tuple type mixed labeled and unlabeled members
Point = type (name: String, Int)

/home/user/tuppence/tup/parse/testdata/error/input/type_declarations.tup:1:29: error: expecting "field name", got "Int"
